完成了常量声明
声明部分还差函数声明
之后是语句树
还要设计一下语句的节点

--- a/c0/c0.vcxproj
+++ b/c0/c0.vcxproj
@@ -24,8 +24,10 @@
     <ClCompile Include="cutoff_ast.c" />
     <ClCompile Include="dag.c" />
     <ClCompile Include="func.c" />
+    <ClCompile Include="generate.c" />
     <ClCompile Include="lex.yy.c" />
     <ClCompile Include="list.c" />
+    <ClCompile Include="statement.c" />
     <ClCompile Include="string.c" />
     <ClCompile Include="types.c" />
     <ClCompile Include="sym.c" />
