--- a/c0/c0.vcxproj.filters
+++ b/c0/c0.vcxproj.filters
@@ -28,7 +28,6 @@
     <ClCompile Include="statement.c" />
     <ClCompile Include="lex.yy.c" />
     <ClCompile Include="assamble.c" />
-    <ClCompile Include="trans.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="func.h">
@@ -64,5 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
   </ItemGroup>
 </Project>
